Fixed some BitmapFont issues on Android and added delay setter for Sprite class.
BitmapFont and BitmapChar for Android has been optimized and fixed by changing from using HashMap to using Android SparseArray type. Also added a new setter "setDelay" to Sprite class so the sprite animation speed can be modified while animating.